[dsmr] Removed sat warnings
Removed usage of apache library and added NonNullByDefault to test classes..

Signed-off-by: Hilbrand Bouwkamp <hilbrand@h72.nl>